Assets: add missing files.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -17,6 +17,7 @@ INCLUDE_DIRECTORIES(
 
 SET ( unittest_common_src
     src/Common/ObjectTest.cpp
+    src/Common/EventTest.cpp
 )
 
 SET ( unittest_rb_src
