--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -290,6 +290,10 @@ SET( renderbackend_oglrenderer_src
     RenderBackend/OGLRenderer/OGLShader.h
 )
 SET( renderbackend_inc
+    ${HEADER_PATH}/RenderBackend/BlendState.h
+    ${HEADER_PATH}/RenderBackend/ClearState.h
+    ${HEADER_PATH}/RenderBackend/SamplerState.h
+    ${HEADER_PATH}/RenderBackend/StencilState.h
     ${HEADER_PATH}/RenderBackend/TextRenderer.h
     ${HEADER_PATH}/RenderBackend/FontBase.h
     ${HEADER_PATH}/RenderBackend/Parameter.h
