--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ INCLUDE_DIRECTORIES(
     3dparty/glew/include
     d:/projects/libs/SDL2-2.0.3/include
     c:/Users/kullingk/Desktop/projects/libs/SDL2-2.0.3/include
+    "C:/Program Files (x86)/Windows Kits/10/Include/10.0.10586.0/um"
     3dparty/soil/src
     /usr/include/SDL2/
     /usr/include/
@@ -26,6 +27,7 @@ INCLUDE_DIRECTORIES(
 
 link_directories(
     d:/projects/libs/SDL2-2.0.3/lib/x86
+    "C:/Program Files (x86)/Windows Kits/10/Lib/10.0.10586.0/um/x86"
     ${CMAKE_HOME_DIRECTORY}/lib
     ${CMAKE_HOME_DIRECTORY}/bin
 )
