SystemTask: fix win32-specific shutdown of SystemTask.

--- a/3dparty/zlib/INSTALL.vcxproj
+++ b/3dparty/zlib/INSTALL.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGUID>{042F12AB-B431-315C-BE1E-0657EA4E8591}</ProjectGUID>
+    <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
     <Keyword>Win32Proj</Keyword>
     <Platform>Win32</Platform>
     <ProjectName>INSTALL</ProjectName>
