--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -27,7 +27,7 @@ SET ( unittest_rb_src
 
 SET ( unittest_scene_src
     src/Scene/ComponentTest.cpp
-    src/Scene/NodeTest
+    src/Scene/NodeTest.cpp
 )
 
 SET ( gtest_src
