PrimRenderTest: fix creation of StaticGeo.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -27,6 +27,7 @@ SET ( unittest_rb_src
 
 SET ( unittest_scene_src
     src/Scene/ComponentTest.cpp
+	src/Scene/GeometryBuilderTest.cpp
     src/Scene/NodeTest.cpp
 )
 
