VulkanRenderer: added handler for VulkanRenderer.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -303,6 +303,12 @@ SET( renderbackend_oglrenderer_src
     RenderBackend/OGLRenderer/OGLShader.cpp
     RenderBackend/OGLRenderer/OGLShader.h
 )
+
+SET( renderbackend_vulkanrenderer_src
+	RenderBackend/VulkanRenderer/VlkRenderEventHandler.h
+	RenderBackend/VulkanRenderer/VlkRenderEventHandler.cpp
+)
+
 SET( renderbackend_inc
     ${HEADER_PATH}/RenderBackend/BlendState.h
     ${HEADER_PATH}/RenderBackend/ClearState.h
@@ -335,7 +341,8 @@ SOURCE_GROUP( Platform\\sdl2      FILES ${platform_sdl2_src} )
 SOURCE_GROUP( Profiling           FILES ${profiling_src} )
 SOURCE_GROUP( Properties          FILES ${properties_src} )
 SOURCE_GROUP( RenderBackend       FILES ${renderbackend_src} )
-SOURCE_GROUP( RenderBackend\\OGLRenderer       FILES ${renderbackend_oglrenderer_src} )
+SOURCE_GROUP( RenderBackend\\OGLRenderer    FILES ${renderbackend_oglrenderer_src} )
+SOURCE_GROUP( RenderBackend\\VulkanRenderer FILES ${renderbackend_vulkanrenderer_src} )
 SOURCE_GROUP( Resources           FILES ${resources_src} )
 SOURCE_GROUP( Scene               FILES ${scene_src} )
 SOURCE_GROUP( Threading           FILES ${threading_src} )
@@ -405,6 +412,7 @@ ADD_LIBRARY( osre SHARED
     ${resources_src}
     ${renderbackend_src}
         ${renderbackend_oglrenderer_src}
+		${renderbackend_vulkanrenderer_src}
     ${scene_src}
     ${threading_src}
         ${threading_impl_src}
