Vulkan backend: fix unresolved symbols for vulkan-specific API-calls.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -305,6 +305,9 @@ SET( renderbackend_oglrenderer_src
 )
 
 SET( renderbackend_vulkanrenderer_src
+	RenderBackend/VulkanRenderer/VlkFunctions.h
+	RenderBackend/VulkanRenderer/VlkFunctions.cpp
+	RenderBackend/VulkanRenderer/VlkExportedFunctions.h
 	RenderBackend/VulkanRenderer/VlkCommon.h
 	RenderBackend/VulkanRenderer/VlkRenderBackend.cpp
 	RenderBackend/VulkanRenderer/VlkRenderBackend.h
