AbstractService: change policy if an onOpen-callback failed: service will be not open anymore though.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -16,7 +16,8 @@ INCLUDE_DIRECTORIES(
 )
 
 SET ( unittest_common_src
-    src/Common/ObjectTest.cpp
+    src/Common/AbstractServiceTest.cpp
+	src/Common/ObjectTest.cpp
     src/Common/EventTest.cpp
     src/Common/IdsTest.cpp
 )
