DynamicLoader: move implementation o baseclass and add an unittest.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -158,6 +158,7 @@ SET( platform_src
     Platform/PlatformInterface.cpp
     Platform/PlatformPluginFactory.cpp
     Platform/PlatformPluginFactory.h
+	Platform/AbstractDynamicLoader.cpp
 )
 
 SET( platform_win32_src 
