Profiling: add performanceCounters + tests.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -227,10 +227,12 @@ ENDIF( WIN32 )
 #==============================================================================
 SET( profiling_inc
     ${HEADER_PATH}/Profiling/FPSCounter.h 
+	${HEADER_PATH}/Profiling/PerformanceCounters.h
 )
 
 SET( profiling_src
     Profiling/FPSCounter.cpp
+	Profiling/PerformanceCounters.cpp
 )
 
 #==============================================================================
