--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -31,6 +31,10 @@ SET ( unittest_rb_src
     src/RenderBackend/RenderCommonTest.cpp
 )
 
+SET ( unittest_profiling_src
+	src/Profiling/PerformanceCountersTest.cpp
+)
+
 SET ( unittest_scene_src
     src/Scene/ComponentTest.cpp
 	src/Scene/GeometryBuilderTest.cpp
@@ -51,6 +55,7 @@ SET ( gtest_src
 
 SOURCE_GROUP( src\\Common         FILES ${unittest_common_src} )
 SOURCE_GROUP( src\\Platform       FILES ${unittest_platform_src})
+SOURCE_GROUP( src\\Profiling      FILES ${unittest_profiling_src})
 SOURCE_GROUP( src\\RenderBackend  FILES ${unittest_rb_src} )
 SOURCE_GROUP( src\\Scene          FILES ${unittest_scene_src} )
 SOURCE_GROUP( src\\GTest          FILES ${gtest_src} )
@@ -58,6 +63,7 @@ SOURCE_GROUP( src\\GTest          FILES ${gtest_src} )
 ADD_EXECUTABLE( osre_unittest
     ${unittest_common_src}
 	${unittest_platform_src}    
+	${unittest_profiling_src}
 	${unittest_rb_src}
     ${unittest_scene_src}
     ${gtest_src}
