RenderBackend: debug update buffers.

--- a/test/RenderTests/CMakeLists.txt
+++ b/test/RenderTests/CMakeLists.txt
@@ -17,6 +17,7 @@ SET ( rendertest_src
     src/BaseTextureRenderTest.cpp
     src/DbgFontRenderTest.cpp
     src/GeoInstanceRenderTest.cpp
+	src/RenderBufferAccessTest.cpp
     src/RenderTestSuite.h
     src/RenderTestUtils.h
     src/main.cpp
