--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3dparty/glm"]
 	path = 3dparty/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "3dparty/assimp"]
+	path = 3dparty/assimp
+	url = https://github.com/assimp/assimp.git
