--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,4 +106,4 @@ set_target_properties(  cppcore_unittest PROPERTIES FOLDER ThirdParty )
 set_target_properties(  freetype PROPERTIES FOLDER ThirdParty )
 set_target_properties(  dist PROPERTIES FOLDER ThirdParty )
 set_target_properties(  assimp PROPERTIES FOLDER ThirdParty )
-set_target_properties(  zlibstatic PROPERTIES FOLDER ThirdParty )
+#set_target_properties(  zlibstatic PROPERTIES FOLDER ThirdParty )
