--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -23,6 +23,10 @@ SET ( unittest_common_src
     src/Common/IdsTest.cpp
 )
 
+SET( unittest_math_src
+    src/Math/BaseMathTest.cpp
+)
+
 SET( unittest_platform_src
 	src/Platform/AbstractDynamicLoaderTest.cpp
 )
@@ -54,6 +58,7 @@ SET ( gtest_src
 )
 
 SOURCE_GROUP( src\\Common         FILES ${unittest_common_src} )
+SOURCE_GROUP( src\\Math           FILES ${unittest_math_src} )
 SOURCE_GROUP( src\\Platform       FILES ${unittest_platform_src})
 SOURCE_GROUP( src\\Profiling      FILES ${unittest_profiling_src})
 SOURCE_GROUP( src\\RenderBackend  FILES ${unittest_rb_src} )
@@ -62,6 +67,7 @@ SOURCE_GROUP( src\\GTest          FILES ${gtest_src} )
 
 ADD_EXECUTABLE( osre_unittest
     ${unittest_common_src}
+    ${unittest_math_src}
 	${unittest_platform_src}    
 	${unittest_profiling_src}
 	${unittest_rb_src}
