Fix some review findings and fix build, when osre will be used as engine.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ SET( BIN_INSTALL_DIR "bin" CACHE PATH
 INCLUDE_DIRECTORIES(
     include/
     3dparty/glew/include
+    3dparty/zlib
     d:/projects/libs/SDL2-2.0.3/include
     c:/Users/kullingk/Desktop/projects/libs/SDL2-2.0.3/include
     d:/libs/SDL2-2.0.5/include
@@ -94,7 +95,7 @@ ADD_SUBDIRECTORY( 3dparty/zlib )
 ADD_SUBDIRECTORY( 3dparty/unzip )
 ADD_SUBDIRECTORY( 3dparty/soil )
 ADD_SUBDIRECTORY( 3dparty/freetype )
-ADD_SUBDIRECTORY( 3dparty/assimp )
+ADD_SUBDIRECTORY( 3dparty/assimp/ )
 
 
 # Include the doc component.
