--- a/3dparty/zlib/zlib.vcxproj
+++ b/3dparty/zlib/zlib.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGUID>{35014594-5D59-3E28-8A75-613E58148E23}</ProjectGUID>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
     <Keyword>Win32Proj</Keyword>
     <Platform>Win32</Platform>
     <ProjectName>zlib</ProjectName>
@@ -209,7 +209,7 @@
     <CustomBuild Include="D:\projects\osre\3dparty\zlib\CMakeLists.txt">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Building Custom Rule D:/projects/osre/3dparty/zlib/CMakeLists.txt</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">setlocal
-"C:\Program Files\CMake\bin\cmake.exe" -HD:/projects/osre -BD:/projects/osre --check-stamp-file D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp
+"C:\Program Files (x86)\CMake\bin\cmake.exe" -HD:/projects/osre -BD:/projects/osre --check-stamp-file D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp
 if %errorlevel% neq 0 goto :cmEnd
 :cmEnd
 endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
@@ -217,12 +217,12 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckTypeSize.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFileCXX.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckFunctionExists.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckCSourceCompiles.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckTypeSize.c.in;D:\projects\osre\CMakeFiles\CheckTypeSize\OFF64_T.c;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckFunctionExists.c;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</LinkObjects>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Building Custom Rule D:/projects/osre/3dparty/zlib/CMakeLists.txt</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">setlocal
-"C:\Program Files\CMake\bin\cmake.exe" -HD:/projects/osre -BD:/projects/osre --check-stamp-file D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp
+"C:\Program Files (x86)\CMake\bin\cmake.exe" -HD:/projects/osre -BD:/projects/osre --check-stamp-file D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp
 if %errorlevel% neq 0 goto :cmEnd
 :cmEnd
 endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
@@ -230,12 +230,12 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckTypeSize.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFileCXX.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckFunctionExists.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckCSourceCompiles.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckTypeSize.c.in;D:\projects\osre\CMakeFiles\CheckTypeSize\OFF64_T.c;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckFunctionExists.c;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkObjects>
       <Message Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">Building Custom Rule D:/projects/osre/3dparty/zlib/CMakeLists.txt</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">setlocal
-"C:\Program Files\CMake\bin\cmake.exe" -HD:/projects/osre -BD:/projects/osre --check-stamp-file D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp
+"C:\Program Files (x86)\CMake\bin\cmake.exe" -HD:/projects/osre -BD:/projects/osre --check-stamp-file D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp
 if %errorlevel% neq 0 goto :cmEnd
 :cmEnd
 endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
@@ -243,12 +243,12 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckTypeSize.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFileCXX.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckFunctionExists.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckCSourceCompiles.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckTypeSize.c.in;D:\projects\osre\CMakeFiles\CheckTypeSize\OFF64_T.c;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckFunctionExists.c;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">false</LinkObjects>
       <Message Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">Building Custom Rule D:/projects/osre/3dparty/zlib/CMakeLists.txt</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">setlocal
-"C:\Program Files\CMake\bin\cmake.exe" -HD:/projects/osre -BD:/projects/osre --check-stamp-file D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp
+"C:\Program Files (x86)\CMake\bin\cmake.exe" -HD:/projects/osre -BD:/projects/osre --check-stamp-file D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp
 if %errorlevel% neq 0 goto :cmEnd
 :cmEnd
 endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
@@ -256,7 +256,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckTypeSize.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFileCXX.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckFunctionExists.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckCSourceCompiles.cmake;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckTypeSize.c.in;D:\projects\osre\CMakeFiles\CheckTypeSize\OFF64_T.c;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckFunctionExists.c;C:\Program Files\CMake\share\cmake-3.7\Modules\CheckIncludeFile.c.in;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.4\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">false</LinkObjects>
     </CustomBuild>
